--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -1,8 +1,9 @@
 <form method="post" action="/create_puppy">
-  <p>
-    Name:&nbsp; <textarea name="name"></textarea><br/>
-    Age:&nbsp; <input type="number" name="age" min="0"><br/>
-    Breed:&nbsp; <textarea name="breed"></textarea>
-  </p>
+  <label for="name">Name:</label>
+  <input type="text" id="name" name="name">
+  <label for="age">Age:</label>
+  <input type="number" id="age" name="age" min="0">
+  <label for="breed">Breed:</label>
+  <input type="text" id="breed" name="breed">
   <input type="submit" value="submit"></input>
 </form>
