automatically backed up by learn

--- a/views/display_puppy.erb
+++ b/views/display_puppy.erb
@@ -1,9 +1,9 @@
 
 <h2>
   Puppy Name:<br/>
-  <%=@puppy.name%>
+  <%=@name%>
 </h2>
 <p>
-  Puppy Breed: <%=@puppy.breed%><br/>
-  Puppy Age: <%=@puppy.age%>
+  Puppy Breed: <%=@breed%><br/>
+  Puppy Age: <%=@age%>
 </p>
